# captcha

./: .gitignore  Cargo.toml  README.md  tool.sh
assets/config/: dev.env.js  prod.env.js
assets/src/components/: Markdown.vue
assets/src/views/doc/: doc.vue
assets/static/web-html/js/: verify.js
src/: captcha.rs  lib.rs  main.rs  phx.rs  time.rs  token.rs
tests/: time_test.rs  token_test.rs
