[package]
name = "captcha"
version = "0.1.0"
authors = ["admin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.11"
num-complex = "0.2.4"
rand = "0.6.0"
rocket = {git = "https://github.com/SergioBenitez/Rocket.git", branch = "master"}
 random-fast-rng = "0.1.0"
 serde_json = "1.0"
 base64 = "0.13.0"