[package]
name = "captcha"
version = "0.1.0"
authors = ["admin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.11"
num-complex = "0.2.4"
rand = "0.6.0"
rocket = {git = "https://github.com/SergioBenitez/Rocket.git", branch = "master"}
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "master", features = ["json"] }
 random-fast-rng = "0.1.0"
 serde_json = "1.0"
 base64 = "0.13.0"
 josekit = "0.7.1"
 serde = {version = "1.0", features = ["derive"] }
 block-modes = "0.7.0"
 aes = "0.6.0"
 hex-literal = "*"
 hex = "*"